# api_takehome

./: Dockerfile  README.md  app.py  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  test_run.bat  test_run.sh
data/: compounds.csv  user_experiments.csv
src/api_takehome/: app.py  main.py
src/api_takehome/data/: users.csv
src/api_takehome/db/: experiment_summaries.py
tests/: test_etl.py
