[project]
name = "api_takehome"
version = "0.1.0"
description = "An API endpoint take-home exam."
readme = "README.md"
requires-python = ">=3.7"
authors = [
  {name = "Matt Boyd", email = "machallboyd@gmail.com"},
]
maintainers = [
  {name = "Matt Boyd", email = "machallboyd@gmail.com"},
]
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "psycopg2-binary"
]

[project.urls]
Repository = "https://github.com/machallboyd/api_takehome"

#[project.scripts]
#spam-cli = "spam:main_cli"
#probably good for a demo script

[project.optional-dependencies]
dev = [
  "pytest",
  "pip-tools",
  "isort",
  "black"
]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["api_takehome"]  # package names should match these glob patterns (["*"] by default)
namespaces = false

[tool.isort]
profile = "appnexus"